--- a/example/index.html
+++ b/example/index.html
@@ -51,6 +51,7 @@
           <button type="button" class="button save" data-action="save-png">Save as PNG</button>
           <button type="button" class="button save" data-action="save-jpg">Save as JPG</button>
           <button type="button" class="button save" data-action="save-svg">Save as SVG</button>
+          <button type="button" class="button save" data-action="save-csv">Save as CSV</button>
         </div>
       </div>
     </div>
